baml_language/crates/baml_tests/snapshots/simple_type_error/baml_tests__simple_type_error__02_parser__simple_type_error.snap
---
source: target/debug/build/baml_tests-eb448e436f8a003a/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Foo"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        BINARY_EXPR
          INTEGER_LITERAL "1"
          PLUS "+"
          STRING_LITERAL "foo"
            QUOTE """
            WORD "foo"
            QUOTE """
        R_BRACE "}"

=== ERRORS ===
None
